--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -85,8 +85,8 @@
     <Compile Include="Assets\Scripts\IWebsocket.cs" />
     <Compile Include="Assets\Scripts\MainHandler.cs" />
     <Compile Include="Assets\Scripts\Model\ActingPlayer.cs" />
+    <Compile Include="Assets\Scripts\Model\Core.cs" />
     <Compile Include="Assets\Scripts\Model\IModelUpdater.cs" />
-    <Compile Include="Assets\Scripts\Model\Model.cs" />
     <Compile Include="Assets\Scripts\Model\ModelChange\ActingPlayerSetPlayerId.cs" />
     <Compile Include="Assets\Scripts\Model\ModelChangeAttribute.cs" />
     <Compile Include="Assets\Scripts\Networking.cs" />
