--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -20,7 +20,7 @@
     "com.unity.timeline": "1.1.0",
     "com.unity.ugui": "1.0.0",
     "com.unity.vectorgraphics": "2.0.0-preview.7",
-    "jillejr.newtonsoft.json-for-unity": "12.0.1",
+    "jillejr.newtonsoft.json-for-unity": "12.0.1-patch-001",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
