Add a bunch of Report DTOs.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -83,14 +83,37 @@
     <Compile Include="Assets\Scripts\Ffb\Dto\NetCommand.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Report.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\ApothecaryChoice.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\ApothecaryRoll.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\ArgueTheCallRoll.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\BiteSpectator.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\Block.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\BlockChoice.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\BlockRoll.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\BombOutOfBounds.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\BribesRoll.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\CardDeactivated.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\CardEffectRoll.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\CardsBought.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\CatchRoll.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\CoinThrow.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\ConfusionRoll.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\DauntlessRoll.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\DefectingPlayers.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\DoubleHiredStarPlayer.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\FanFactorRoll.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\Foul.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\FumbblResultUpload.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\HandOver.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\Inducement.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\InducementsBought.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\Injury.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\InterceptionRoll.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\KickoffExtraReRoll.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PlayerAction.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\ProtocolIdAttribute.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\RawString.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\RegenerationRoll.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\ReRoll.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\SkillRoll.cs" />
     <Compile Include="Assets\Scripts\Ffb\IWebsocket.cs" />
     <Compile Include="Assets\Scripts\Ffb\Networking.cs" />
@@ -115,8 +138,10 @@
     <Compile Include="Assets\Scripts\UI\LogText\BlockChoice.cs" />
     <Compile Include="Assets\Scripts\UI\LogText\BlockRoll.cs" />
     <Compile Include="Assets\Scripts\UI\LogText\ConfusionRoll.cs" />
+    <Compile Include="Assets\Scripts\UI\LogText\Foul.cs" />
     <Compile Include="Assets\Scripts\UI\LogText\PlayerAction.cs" />
     <Compile Include="Assets\Scripts\UI\LogText\RawString.cs" />
+    <Compile Include="Assets\Scripts\UI\LogText\ReRoll.cs" />
     <Compile Include="Assets\Scripts\UI\LogTextGenerator.cs" />
     <Compile Include="Assets\SettingsHandler.cs" />
     <Compile Include="Assets\TextPanelHandler.cs" />
