Add remaining Report DTOs.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -109,11 +109,33 @@
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\Injury.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\InterceptionRoll.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\KickoffExtraReRoll.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\KickoffPitchInvasion.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\KickoffResult.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\KickoffRiot.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\KickoffScatter.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\KickoffThrowARock.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\Leader.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\MasterChefRoll.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\MostValuablePlayers.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\NoPlayersToField.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PassBlock.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PassRoll.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PenaltyShootout.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PettyCash.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PilingOn.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PlayCard.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PlayerAction.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\ProtocolIdAttribute.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\Pushback.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\RaiseDead.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\RawString.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\ReceiveChoice.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\Referee.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\RegenerationRoll.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\ReRoll.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\ScatterBall.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\ScatterPlayer.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\SecretWeaponBan.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\SkillRoll.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\SkillUse.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\SpecialEffectRoll.cs" />
