Add more missing report DTOs and some minor work on report handlers.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -88,6 +88,8 @@
     <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\ActingPlayerSetPlayerId.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\NetCommand.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Report.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\AlwaysHungryRoll.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\AnimosityRoll.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\ApothecaryChoice.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\ApothecaryRoll.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\ArgueTheCallRoll.cs" />
@@ -129,6 +131,7 @@
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PassRoll.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PenaltyShootout.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PettyCash.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PickupRoll.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PilingOn.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PlayCard.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PlayerAction.cs" />
@@ -165,6 +168,7 @@
     <Compile Include="Assets\Scripts\IReflectedObject.cs" />
     <Compile Include="Assets\Scripts\MainHandler.cs" />
     <Compile Include="Assets\Scripts\Model\ActingPlayer.cs" />
+    <Compile Include="Assets\Scripts\Model\Coach.cs" />
     <Compile Include="Assets\Scripts\Model\Core.cs" />
     <Compile Include="Assets\Scripts\Model\DataTypes.cs" />
     <Compile Include="Assets\Scripts\Model\Gender.cs" />
@@ -172,17 +176,26 @@
     <Compile Include="Assets\Scripts\Model\ModelChange\ActingPlayerSetPlayerId.cs" />
     <Compile Include="Assets\Scripts\Model\ModelUpdater.cs" />
     <Compile Include="Assets\Scripts\Model\Player.cs" />
+    <Compile Include="Assets\Scripts\Model\PlayerState.cs" />
+    <Compile Include="Assets\Scripts\Model\SeriousInjury.cs" />
     <Compile Include="Assets\Scripts\Model\SkillType.cs" />
+    <Compile Include="Assets\Scripts\Model\Team.cs" />
     <Compile Include="Assets\Scripts\Model\Util.cs" />
     <Compile Include="Assets\Scripts\ReflectedFactory.cs" />
     <Compile Include="Assets\Scripts\ReflectedGenerator.cs" />
     <Compile Include="Assets\Scripts\UI\LogRecord.cs" />
+    <Compile Include="Assets\Scripts\UI\LogText\AlwaysHungryRoll.cs" />
+    <Compile Include="Assets\Scripts\UI\LogText\AnimosityRoll.cs" />
+    <Compile Include="Assets\Scripts\UI\LogText\ApothecaryChoice.cs" />
     <Compile Include="Assets\Scripts\UI\LogText\ApothecaryRoll.cs" />
+    <Compile Include="Assets\Scripts\UI\LogText\ArgueTheCallRoll.cs" />
+    <Compile Include="Assets\Scripts\UI\LogText\BiteSpectator.cs" />
     <Compile Include="Assets\Scripts\UI\LogText\Block.cs" />
     <Compile Include="Assets\Scripts\UI\LogText\BlockChoice.cs" />
     <Compile Include="Assets\Scripts\UI\LogText\BlockRoll.cs" />
     <Compile Include="Assets\Scripts\UI\LogText\ConfusionRoll.cs" />
     <Compile Include="Assets\Scripts\UI\LogText\Foul.cs" />
+    <Compile Include="Assets\Scripts\UI\LogText\Injury.cs" />
     <Compile Include="Assets\Scripts\UI\LogText\PlayerAction.cs" />
     <Compile Include="Assets\Scripts\UI\LogText\RawString.cs" />
     <Compile Include="Assets\Scripts\UI\LogText\ReRoll.cs" />
