Start work on Model and add a structure for dealing with FFB INamedObject datatype in DTOs.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -72,17 +72,28 @@
     <Compile Include="Assets\Scripts\Api\Dto\Coach\Get.cs" />
     <Compile Include="Assets\Scripts\Api\Dto\Match\Current.cs" />
     <Compile Include="Assets\Scripts\Api\FumbblApi.cs" />
+    <Compile Include="Assets\Scripts\EnumerationConverter.cs" />
     <Compile Include="Assets\Scripts\FFB.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\AbstractCommand.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ClientJoin.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ClientPing.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ClientRequestVersion.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Commands\ActingPlayer.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Commands\DialogParameter.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Commands\FieldModel.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Commands\Game.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Commands\GameOptions.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Commands\GameResult.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Commands\ServerGameState.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\ServerGameTime.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Commands\ServerJoin.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\ServerModelSync.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\ServerPong.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\ServerSound.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\ServerTalk.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\ServerVersion.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Commands\Team.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Commands\TurnData.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ICommand.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ModelChange.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\ActingPlayerSetPlayerId.cs" />
@@ -165,6 +176,7 @@
     <Compile Include="Assets\Scripts\Ffb\Networking.cs" />
     <Compile Include="Assets\Scripts\Ffb\Protocol.cs" />
     <Compile Include="Assets\Scripts\Ffb\Websocket.cs" />
+    <Compile Include="Assets\Scripts\FFBEnumeration.cs" />
     <Compile Include="Assets\Scripts\IReflectedObject.cs" />
     <Compile Include="Assets\Scripts\MainHandler.cs" />
     <Compile Include="Assets\Scripts\Model\ActingPlayer.cs" />
@@ -176,6 +188,7 @@
     <Compile Include="Assets\Scripts\Model\ModelChange\ActingPlayerSetPlayerId.cs" />
     <Compile Include="Assets\Scripts\Model\ModelUpdater.cs" />
     <Compile Include="Assets\Scripts\Model\Player.cs" />
+    <Compile Include="Assets\Scripts\Model\PlayerAction.cs" />
     <Compile Include="Assets\Scripts\Model\PlayerState.cs" />
     <Compile Include="Assets\Scripts\Model\SeriousInjury.cs" />
     <Compile Include="Assets\Scripts\Model\SkillType.cs" />
