--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -8,7 +8,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <ProjectGuid>{E1668AE0-8598-5F24-5625-D926BFFB68C3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -64,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\ChatInputHandler.cs" />
+    <Compile Include="Assets\FieldHandler.cs" />
     <Compile Include="Assets\GameBrowserEntry.cs" />
     <Compile Include="Assets\GameBrowserHandler.cs" />
     <Compile Include="Assets\InputHandler.cs" />
@@ -84,6 +86,9 @@
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\Game.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\GameOptions.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\GameResult.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Commands\Player.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Commands\PlayerData.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Commands\Roster.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\ServerGameState.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\ServerGameTime.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\ServerJoin.cs" />
@@ -97,6 +102,7 @@
     <Compile Include="Assets\Scripts\Ffb\Dto\ICommand.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ModelChange.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\ActingPlayerSetPlayerId.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\FieldModelSetPlayerCoordinate.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\NetCommand.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Report.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\AlwaysHungryRoll.cs" />
@@ -187,6 +193,7 @@
     <Compile Include="Assets\Scripts\Model\Injury.cs" />
     <Compile Include="Assets\Scripts\Model\InjuryAttribute.cs" />
     <Compile Include="Assets\Scripts\Model\ModelChange\ActingPlayerSetPlayerId.cs" />
+    <Compile Include="Assets\Scripts\Model\ModelChange\FieldModelSetPlayerCoordinate.cs" />
     <Compile Include="Assets\Scripts\Model\ModelUpdater.cs" />
     <Compile Include="Assets\Scripts\Model\Player.cs" />
     <Compile Include="Assets\Scripts\Model\PlayerAction.cs" />
